Fixing the spacing on mobile and desktop on the hero

--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -103,7 +103,12 @@
 
         &.-spaced {
             .o-hero__title {
-                padding-top: 125px;
+                padding-top: 60px;
+
+                @include breakpoints("sm-tablet") {
+                    padding-bottom: 125px;
+                    padding-top: 100px;
+                }
             }
 
             .o-hero__meta {
