--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -10,7 +10,7 @@
             }
 
             &.-spaced {
-                @include breakpoints("desktop") {
+                @include breakpoints("tablet") {
                     padding-top: 100px;
                 }
             }
